--- a/templates/index.html
+++ b/templates/index.html
@@ -60,14 +60,11 @@
                 <table id="ordersTable">
                     <thead>
                         <tr>
-                            <th>№ заказа</th>
-                            <th>Клиент</th>
-                            <th>Товар</th>
-                            <th>Кол-во</th>
-                            <th>Срок сдачи</th>
-                            <th>Статус</th>
-                            <th>Создатель</th>
-                            <th>Действия</th>
+                            <th style="width: 5%;">№</th>
+                            <th style="width: 15%;">Клиент</th>
+                            <th style="width: 45%;">Товары (в заказе)</th>
+                            <th style="width: 15%;">Статус заказа</th>
+                            <th style="width: 10%;">Действия</th>
                         </tr>
                     </thead>
                     <tbody id="ordersTableBody">
@@ -231,13 +228,19 @@
             
         </div>
     </template>
-{% endblock content %}
+    {% endblock content %}
+
 
 {% block extra_js %}
-
-<script>
-    // Передаем ID пользователя в JS, чтобы app.js мог его использовать
-    const CURRENT_USER_ID = {{ request.user.id }}; 
-</script>
+    <script>
+        // Передаем ID пользователя в JS, чтобы app.js мог его использовать
+        const CURRENT_USER_ID = {{ request.user.id }}; 
+    </script>
+    
+    <script type="module" src="{% static 'js/state.js' %}"></script>
+    <script type="module" src="{% static 'js/utils.js' %}"></script>
+    <script type="module" src="{% static 'js/api.js' %}"></script>
+    <script type="module" src="{% static 'js/ui.js' %}"></script>
+    <script type="module" src="{% static 'js/app.js' %}"></script>
 
 {% endblock %}
