--- a/templates/login.html
+++ b/templates/login.html
@@ -6,10 +6,10 @@
     <title>Вход в EcoPrint</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
+    <script src="https%3A//kit.fontawesome.com/50b7594b09.js" crossorigin="anonymous"></script>
     
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
-    
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
 </head>
 <body>
