--- a/templates/settings_page.html
+++ b/templates/settings_page.html
@@ -3,6 +3,9 @@
 
 {% block title %}Настройки{% endblock %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'css/settings.css' %}?v=1.0">
+{% endblock extra_css %}
 {% block content %}
 <div class="container">
     <div class="main-content">
