--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,9 @@
     <title>{% block title %}Эко Принт{% endblock %}</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
     
     <link rel="stylesheet" href="{% static 'css/main.css' %}?v=1.3">
     <link rel="stylesheet" href="{% static 'css/sidebar.css' %}?v=1.0">
@@ -30,17 +32,18 @@
     </div> 
     
     <script>
-        // Передаем настройки из Django (Profile) в JavaScript
-        // Теперь app.js сможет их прочитать
+        // Глобальные настройки (доступны всем скриптам)
         window.USER_SETTINGS = {
             soundEnabled: {% if request.user.is_authenticated %}{{ request.user.profile.sound_notifications|yesno:"true,false" }}{% else %}true{% endif %},
             popupEnabled: {% if request.user.is_authenticated %}{{ request.user.profile.popup_notifications|yesno:"true,false" }}{% else %}true{% endif %},
             dayBeforeEnabled: {% if request.user.is_authenticated %}{{ request.user.profile.day_before_notifications|yesno:"true,false" }}{% else %}true{% endif %}
         };
     </script>
-    <script src="{% static 'js/app.js' %}?v=1.2"></script>
+    
+    <script src="{% static 'js/main.js' %}"></script>
 
     {% block extra_js %}
     {% endblock extra_js %}
-    </body>
+    
+</body>
 </html>
