--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -3,6 +3,9 @@
 
 {% block title %}Статистика и Аналитика{% endblock %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'css/statistics.css' %}?v=1.0">
+{% endblock extra_css %}
 {% block content %}
 <div class="container">
     <div class="main-content">
