--- a/templates/settings/product_confirm_delete.html
+++ b/templates/settings/product_confirm_delete.html
@@ -23,7 +23,7 @@
                 Это действие нельзя будет отменить.
             </p>
 
-            <div class_ ="form-actions" style="margin-top: 30px;">
+            <div class="form-actions" style="margin-top: 30px;">
                 <button type="submit" class="btn btn-danger">
                     <i class="fas fa-trash"></i>
                     Да, удалить
