--- a/templates/settings/user_form.html
+++ b/templates/settings/user_form.html
@@ -33,7 +33,7 @@
             </div>
             {% endfor %}
 
-            <div class_ ="form-actions" style="margin-top: 20px;">
+            <div class="form-actions" style="margin-top: 20px;">
                 <button type="submit" class="btn btn-content">
                     <i class="fas fa-save"></i>
                     Сохранить
@@ -46,5 +46,4 @@
 
     </div>
 </div>
-
 {% endblock %}
