--- a/templates/settings/company_settings.html
+++ b/templates/settings/company_settings.html
@@ -54,7 +54,7 @@
                 {{ form.company_logo }}
             </div>
 
-            <div class_ ="form-actions" style="margin-top: 20px; border-top: 1px solid var(--border-color); padding-top: 20px;">
+            <div class="form-actions" style="margin-top: 20px; border-top: 1px solid var(--border-color); padding-top: 20px;">
                 <button type="submit" class="btn btn-content">
                     <i class="fas fa-save"></i>
                     Сохранить данные
