--- a/templates/base.html
+++ b/templates/base.html
@@ -7,10 +7,11 @@
     
     <title>{% block title %}Эко Принт{% endblock %}</title>
     
+    <link rel="icon" href="{% static 'img/logo.ico' %}" type="image/x-icon">
+
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
     
     <link rel="stylesheet" href="{% static 'css/main.css' %}?v=1.3">
     <link rel="stylesheet" href="{% static 'css/sidebar.css' %}?v=1.0">
@@ -32,7 +33,6 @@
     </div> 
     
     <script>
-        // Глобальные настройки (доступны всем скриптам)
         window.USER_SETTINGS = {
             soundEnabled: {% if request.user.is_authenticated %}{{ request.user.profile.sound_notifications|yesno:"true,false" }}{% else %}true{% endif %},
             popupEnabled: {% if request.user.is_authenticated %}{{ request.user.profile.popup_notifications|yesno:"true,false" }}{% else %}true{% endif %},
