--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Вход в EcoPrint</title>
-    
+    <link rel="icon" href="{% static 'img/logo.ico' %}" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     
     <script src="https%3A//kit.fontawesome.com/50b7594b09.js" crossorigin="anonymous"></script>
